--- a/.github/workflows/build&publish-sql-server.yml
+++ b/.github/workflows/build&publish-sql-server.yml
@@ -24,4 +24,4 @@ jobs:
       - uses: actions/upload-artifact@v3.1.2
         with:
           name: sqldb
-          path: ${{ github.workspace }}/bin/DB/ 
+          path: ${{ github.workspace }}/bin/Debug/ 
